--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Mi pagina web</title>
 </head>
 <body>
-    
+    <div class="container">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore, nemo.</p>
+    </div>
 </body>
 </html>
