Agregue un comentario

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <h1>Esto es un titulo</h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore, nemo.</p>
         <h1>Esto es un cambio</h1>
+        <!--Esto es un comentario y estoy haciendo uso de git para controlar las versiones 
+            de este index ola javi-->
     </div>
 </body>
 </html>
