Se agregó contenido nuevo y ordenado

--- a/index.html
+++ b/index.html
@@ -13,40 +13,72 @@
     <div class="header">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar scroll</a>
+              <a class="navbar-brand" href="#">Bienvenidos</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link active" aria-current="page" href="#">Menú principal</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Link
+                      Links
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="https://github.com/ebernauta/test-repositorio">Mi repositorio github</a></li>
+                      <li><a class="dropdown-item" href="https://portales.inacap.cl">Mi universidad</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="https://stackoverflow.com/users/18626728/ebernauta">Mi perfil StackOverflow</a></li>
                     </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled">Link</a>
                   </li>
                 </ul>
                 <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
+                  <input class="form-control me-2" type="search" placeholder="¿Que deseas buscar?" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Buscar</button>
                 </form>
               </div>
             </div>
           </nav>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="carta-imagen">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                          <div class="col-md-4">
+                            <img src="assets\img\dcqtj6j-c8c392ea-44fe-436e-aec5-61526ddee1c9.gif" class="img-fluid rounded-start" alt="carta-gif">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body">
+                              <h5 class="card-title">Hey buen dia !</h5>
+                              <p class="card-text">Este gif es uno de mis favoritos entre muchos mas que tengo guardados, lo uso en las
+                                  mayorias de mis redes sociales.
+                              </p>
+                              <p class="card-text"><small class="text-muted"><i>Solo espero que no tenga derechos de autor &#128517</i></small></p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="carta-sin-imagen">
+                    <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
+                        <div class="card-header">Algo sobre mi</div>
+                        <div class="card-body">
+                          <h5 class="card-title">¿Que es lo que mas me gusta hacer por las tardes?</h5>
+                          <p class="card-text">Por lo general cuando llego de la universidad me hago un café
+                              y me siento en mi ordenador e investigo de todo un poco sobre diferentes lenguajes
+                              de programacion 
+                          </p>
+                        </div>
+                </div>
+                
+            </div>
+        </div>
     </div>
 </body>
 </html>
